== V2.13b - 22 August 2020 ==
-Modals now use Modal.js and reworked to work on UCP
-Added CSS and JS fixes for features that scripts expected that were removed on UCP wikis
-Fixed various UCP related issues


== V2.13 - 15 August 2020 ==
-Fixed UCP fandom wikis not loading due to code trying to use old log system for all fandom wikis
-Fixed issue with UCP wiki favicons not showing correct image (seems fandom doesn't set "favicon" attribute correctly)
-Updated code to account for discussions now having 3 types; forum (normal), message wall, and article comments
-Link behavior for message walls somewhat fixed; article comments are not
-meta/repo changes:
	-"branches" folder removed, and code moved to git branches
	-removed "build" folder from the repo and added it to .gitignore


== V2.12b - 6 October 2019 ==
-Translations added for tr - provided by BaRaN6161TURK
-Analytiics link added to WikiPanel (if it's a wikia wiki, and you have the "analytics" right)
-Fixing some stuff that still uses wikia urls


== V2.12 - 8 March 2019 ==
-Updating parsing of wiki list
	-http(s) and ending slashes are now allowed (to support new wikia /lang/ wiki format)
	-Updated link var parsing. link vars can now:
		-be used as before
		-used as before but with a space between the link and first "&" (to prevent becoming part of link)
		-be added to sub lists (either each link var on own list, or all on one seperated by &s)
-Fixed bug with discussion links to language wikis linking to english wiki.
-Added discussion link to wiki panel (if wiki has discussions enabled).


== V2.11c - 8 November 2018 ==
-Translations updated for de


== V2.11b - 2 November 2018 ==
- Small update to use wikia-specific behavior on new fandom domain.


== V2.11 - 25 August 2018 ==
- Clicking a Notification now opens RCM in chrome
- New option, data-timeFormat, which can accept 12 or 24 (default), with 12 adding AM/PM to timestamps