@@ -1,3 +1,10 @@
+== ==
+-Updated code to used JQuery typing + extended window; window calls no longer use <any>
+-Added wikia-chiclet-button to CSS for UCP support
+-Converted rc "arr_" images to CSS as uri data. This was done for 2 reasons:
+	-Encase those png image are ever removed (since they are no longer used on UCP)
+	-To be more efficient (better than manually having an img tag each time)
+
 == V2.13b - 22 August 2020 ==
 -Modals now use Modal.js and reworked to work on UCP
 -Added CSS and JS fixes for features that scripts expected that were removed on UCP wikis
